--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
-</head>
-
-<body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
-
+<html>
+	<head>
+		<title>SEN3004</title>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="style/style.css">
+	</head>
+	<body>
+		<!-- This is a comment -->
+		<h1>Hello</h1>
+		<p><em>Welcome</em> to <span class="red">my</span> <strong>web</strong> page.</p>
+		<h3>My Hobbies:</h3>
+		<ul>
+			<li>Building drones</li>
+			<li>Reading books</li>
+			<li>Playing games</li>
+		</ul>		
+		<h3>My Programming Skills:</h3>
+		<table class="bordered">
+			<tr>
+				<td>Java</td>
+				<td>10/10</td>
+			</tr>
+			<tr>
+				<td>JavaScript</td>
+				<td>9/10</td>
+			</tr>
+			<tr>
+				<td>Python</td>
+				<td>9/10</td>
+			</tr>
+			<tr>
+				<td>C++</td>
+				<td>9/10</td>
+			</tr>		
+		</table>
+		<hr>
+		<a href="contact.html"><img src="img/envelope.png"></a>	
+	</body>
 </html>
